@@ -2,6 +2,7 @@
 * extra sanity checks for BAT_REPORTDIR
 * add wrapper code for scanning Minix v1 file systems
 * add configuration for scanning Minix v1 file systems
+* pass blacklists to forges and licenses checks
 
 2012-05-20
 * add first version of minix unpacker to bat-extratools
